Preserve indentation when writing ESQL golden test actual files (#144106)
.actual files were written from normalized (stripped) content, which removed leading whitespace. Instead, we should write from the same content used for expected files (normalizeNameIds + normalizeSyntheticNames only) so the tree layout remains readable.